<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<!--    <item-->
<!--        android:id="@+id/menu_search"-->
<!--        android:icon="@drawable/ic_search_24px"-->
<!--        android:title="@android:string/search_go"-->
<!--        app:actionViewClass="androidx.appcompat.widget.SearchView"-->
<!--        app:showAsAction="always|collapseActionView" />-->

    <item
        android:id="@+id/menu_clear_search_history"
        android:icon="@android:drawable/ic_menu_delete"
        android:title="@string/clear_search_history" />

    <item
        android:id="@+id/menu_choose_theme"
        android:title="@string/choose_theme" />

    <item
        android:id="@+id/menu_submit_issue"
        android:icon="@android:drawable/ic_menu_send"
        android:title="@string/action_report_issue"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_contribute"
        android:icon="@android:drawable/ic_menu_edit"
        android:title="@string/action_contribute"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_check_latest_release"
        android:title="@string/action_check_latest_release"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_note_app"
        android:enabled="false"
        android:icon="@android:drawable/star_big_on"
        android:title="@string/action_rate_app"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_about"
        android:enabled="true"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="@string/about"
        app:showAsAction="never" />

</menu>