...
            tools:ignore="ContentDescription"
            tools:layout_gravity="center"
            android:paddingBottom="2dp"/>
    </LinearLayout>

    <TextView
        android:id="@+id/listitem_image_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_toStartOf="@id/box_image_indicators"
        android:ellipsize="end"
...
